--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+
+body{
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.react-pdf__Page {
+  text-align: -webkit-center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.react-pdf__Page__canvas,.mc-pdf-page {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mrc-embed-pdf__toolbar{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 24px;
+  /* height: 40px; */
+  border: 0;
   align-items: center;
+  padding: 8px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.mrc-embed-pdf__toolbar-item{
+  display: flex;
+  flex-direction:row;
+  align-items: center;
+  /* padding:"0 16px"; */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mrc-embed-pdf__control-input{
+  height: 24px;
+}
+.mrc-embed-pdf__toolbar-item button{
+  /* width: 40px;
+  height: 32px; */
+  /* background: aqua;
+  color: bisque; */
+}
+.react-pdf__Page .mrc-embed-pdf__page-list-item{
+  background-color: #E6E6E6!important;
 }
