--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-
-body{
+body {
   overflow: hidden;
 }
 
@@ -7,11 +6,12 @@ body{
   text-align: -webkit-center;
 }
 
-.react-pdf__Page__canvas,.mc-pdf-page {
+.react-pdf__Page__canvas,
+.mc-pdf-page {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
-.mrc-embed-pdf__toolbar{
+.mrc-embed-pdf__toolbar {
   display: flex;
   flex-direction: row;
   gap: 24px;
@@ -21,24 +21,23 @@ body{
   padding: 8px;
   justify-content: center;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-
 }
 
-.mrc-embed-pdf__toolbar-item{
+.mrc-embed-pdf__toolbar-item {
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   align-items: center;
   /* padding:"0 16px"; */
 }
-.mrc-embed-pdf__control-input{
+.mrc-embed-pdf__control-input {
   height: 24px;
 }
-.mrc-embed-pdf__toolbar-item button{
+.mrc-embed-pdf__toolbar-item button {
   /* width: 40px;
   height: 32px; */
   /* background: aqua;
   color: bisque; */
 }
-.react-pdf__Page .mrc-embed-pdf__page-list-item{
-  background-color: #E6E6E6!important;
+.react-pdf__Page .mrc-embed-pdf__page-list-item {
+  background-color: #e6e6e6 !important;
 }
