--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body {
   border: 0;
   align-items: center;
   justify-content: space-around;
-  position: fixed;
+  /* position: fixed; */
   /* width: 70%; */
   z-index: 4;
   gap: 16px;
